--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -3,6 +3,9 @@
 
 # Uncomment the following line to enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_DISPLAY_THREAD_STACK_SIZE=2048
+CONFIG_NICE_VIEW=y
+CONFIG_NICE_VIEW_DISPLAY_ADDRESS=0x3C  # Замените на правильный адрес вашего дисплея
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
