--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -4,6 +4,9 @@
 # Uncomment the following line to enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
 
+# https://github.com/db-ok/SofleChocWireless/blob/main/docs/build_guide_choc_wireless.md
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
