--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -5,7 +5,7 @@
 CONFIG_ZMK_DISPLAY=y
 
 # https://github.com/db-ok/SofleChocWireless/blob/main/docs/build_guide_choc_wireless.md
-#CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=4096
 
 # Uncomment these two lines to add support for encoders
