--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -21,3 +21,4 @@ CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_BT_CTLR_PHY_2M=n
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
