--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -21,3 +21,5 @@ CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
