--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -20,6 +20,11 @@ CONFIG_ZMK_RGB_UNDERGLOW=n
 # on and off. This also causes the display to turn off.
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
-CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+CONFIG_BT=y
+
+CONFIG_ZMK_BLE=n
+
+#CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+#CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
