--- a/build.yaml
+++ b/build.yaml
@@ -24,5 +24,5 @@ include:
   - board: nice_nano_v2
     shield: sofle_right nice_view_adapter nice_view
     snippet: zmk-usb-logging
-  - bboard: nice_nano_v2
+  - board: nice_nano_v2
     shield: settings_reset
