--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -2,11 +2,11 @@
 # SPDX-License-Identifier: MIT
 
 # Uncomment the following line to enable the Sofle OLED Display
-#CONFIG_ZMK_DISPLAY=y
-
-# https://github.com/db-ok/SofleChocWireless/blob/main/docs/build_guide_choc_wireless.md
-#CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
-#CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=4096
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
