--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -21,10 +21,15 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 #CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 
-#CONFIG_BT=y
-
-#CONFIG_ZMK_BLE=n
-
-#CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-
-#CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_MIN=10
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=50
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=15
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
+# CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=Y
+# disable "Underglow toggling also controls external power" so that OLED can still run with RGB off
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
