--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -3,7 +3,7 @@
 
 # Uncomment the following line to enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+#CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 #CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 #CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
 #CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
