--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -22,7 +22,7 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+#CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
