--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -29,7 +29,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MIN=10
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=50
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=15
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
 # CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=Y
 # disable "Underglow toggling also controls external power" so that OLED can still run with RGB off
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
