--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -3,10 +3,6 @@
 
 # Uncomment the following line to enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
-#CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
-#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-#CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
-#CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
@@ -20,3 +16,4 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # on and off. This also causes the display to turn off.
 #CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
+CONFIG_BT_CTLR_PHY_2M=n
