--- a/build.yaml
+++ b/build.yaml
@@ -20,9 +20,9 @@
 include:
   - board: nice_nano_v2
     shield: sofle_left nice_view_adapter nice_view
-    snippet: zmk-usb-logging
+#    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: sofle_right nice_view_adapter nice_view
-    snippet: zmk-usb-logging
+#    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: settings_reset
